# PlantCare

./: .gitignore  README.md  app.py  keras_model.h5  pyproject.toml
PlantCare/templates/Plant/: index.html
model/: keras_model_1.h5
static/js/: app.js  chart.js  progress.js  search.js
templates/: index.html
