[project]
name = "plantcare"
version = "0.1.0"
description = ""
authors = [
    {name = "JW5123",email = "Jay2002714@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "flask (==3.1.0)",
    "tensorflow-io-gcs-filesystem (==0.31.0)",
    "tensorflow-estimator (==2.12.0)",
    "tensorflow-intel (==2.12.0)",
    "pillow (==11.0.0)",
    "google-generativeai (==0.8.3)",
    "python-dotenv (==1.0.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
